{
  "version": 4,
  "terraform_version": "1.10.4",
  "serial": 16,
  "lineage": "0d1e570c-5f7d-0684-31aa-f2663bc65675",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:880293514870:internet-gateway/igw-0340b8bb81c7aed6f",
            "id": "igw-0340b8bb81c7aed6f",
            "owner_id": "880293514870",
            "tags": {
              "Environment": "dev",
              "Name": "hello-world-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "hello-world-igw"
            },
            "vpc_id": "vpc-0767f69a64c7585cf"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:880293514870:route-table/rtb-0d95bdc4e417a4f58",
            "id": "rtb-0d95bdc4e417a4f58",
            "owner_id": "880293514870",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0340b8bb81c7aed6f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "hello-world-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "hello-world-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0767f69a64c7585cf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa377cb2085757cb",
            "route_table_id": "rtb-0d95bdc4e417a4f58",
            "subnet_id": "subnet-02021ce5d710c6f39"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068abb06d72d6cad6",
            "route_table_id": "rtb-0d95bdc4e417a4f58",
            "subnet_id": "subnet-082777fb941e8aa26"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:880293514870:security-group/sg-0ba970956d91f025f",
            "description": "Allow inbound traffic for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ba970956d91f025f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP inbound",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "hello-world-ecs-tasks-sg",
            "name_prefix": "",
            "owner_id": "880293514870",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "hello-world-ecs-tasks-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "hello-world-ecs-tasks-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0767f69a64c7585cf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:880293514870:subnet/subnet-02021ce5d710c6f39",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02021ce5d710c6f39",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "880293514870",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "hello-world-public-subnet-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "hello-world-public-subnet-1"
            },
            "vpc_id": "vpc-0767f69a64c7585cf"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:880293514870:subnet/subnet-082777fb941e8aa26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-082777fb941e8aa26",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "880293514870",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "hello-world-public-subnet-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "hello-world-public-subnet-2"
            },
            "vpc_id": "vpc-0767f69a64c7585cf"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:880293514870:vpc/vpc-0767f69a64c7585cf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00633b6c5e5236143",
            "default_route_table_id": "rtb-0c6f60e95036c143f",
            "default_security_group_id": "sg-0db172f7226bd81d8",
            "dhcp_options_id": "dopt-0e74a9b9e92f18d94",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0767f69a64c7585cf",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c6f60e95036c143f",
            "owner_id": "880293514870",
            "tags": {
              "Environment": "dev",
              "Name": "hello-world-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "hello-world-vpc"
            }
          }
        }
      ]
    }
  ]
}